BUGFIX: Align filterlist dropdown with its button

--- a/Resources/Private/JavaScript/media-module/src/components/TopBar/AssetsFilter/AssetsFilter.module.css
+++ b/Resources/Private/JavaScript/media-module/src/components/TopBar/AssetsFilter/AssetsFilter.module.css
@@ -31,7 +31,7 @@
     position: absolute;
     gap: 1px;
     top: 100%;
-    right: 0;
+    left: 0;
     background-color: var(--theme-colors-ContrastDarker);
 }
 
